--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "eslint": "^5.15.3",
     "express": "^4.16.4",
     "jest": "^23.6.0",
     "mongodb-memory-server": "^2.9.1",
